fix carousel resolution mobile

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
   --main-color: #1190cb;
   --green-color: #6aaf08
 }
-
+/* Navbar.js */
 .navbar {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
@@ -76,4 +76,12 @@ code {
 }
 .carousel-caption h1 {
   font-size: 60px !important;
+}
+@media (max-width: 576px) { 
+  #carousel-caption2 h1{
+    font-size: 23px !important;
+  }
+  #overlay3{
+    background-position: right;
+  }
 }
